# swarm

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  langgraph.json  pyproject.toml
benchmarks/: __init__.py  ablation.py  ablation_metrics.py  bench_results.json  build_remaining.sh  campaign_report.py  daily_15.txt  daily_15_buildable.txt  daily_5_buildable.txt  daily_5_first_patched.txt  enum_discipline_analysis.py  launch_split.py  loopback.py  metrics.py  multimodel.py  patch_bitrot.sh  provision.py  run_juice_shop.sh  run_xbow_daily.sh  runner.py  setup_loopback_pool.sh  targets.yaml  work_queue.py  xbow_runner.py
benchmarks/.split/: slice_00.txt  slice_01.txt  slice_02.txt  slice_03.txt  slice_04.txt  slice_05.txt  slice_06.txt  slice_07.txt  slice_08.txt  slice_09.txt  slice_10.txt  slice_11.txt  slice_12.txt  slice_13.txt  slice_14.txt  slice_15.txt  slice_16.txt  slice_17.txt  slice_18.txt  slice_19.txt
benchmarks/refusal_corpus/: README.md  ladder_stats.json  ladder_stats.md  refusal_index.jsonl
configs/: default.yaml
configs/experiments/: no_knowledge.yaml  no_rag.yaml  no_skills.yaml  no_stealth.yaml  single_agent.yaml
descriptions/: README.md
descriptions/a/: auth-testing.md  bfla.md  business-logic.md  chain-ssrf-to-rce.md  crypto.md  deserialization.md  graphql.md  idor.md  information-disclosure.md  insecure-file-uploads.md  lfi.md  mass-assignment.md  parameter-pollution.md  race-conditions.md  rce.md  request-smuggling.md  session-mgmt.md  sqli.md  ssrf.md  ssti.md  xss.md  xxe.md
descriptions/b/: auth-testing.md  bfla.md  bug-identification.md  business-logic.md  chain-ssrf-to-rce.md  crypto.md  csrf.md  deserialization.md  error-handling.md  fuzzing.md  graphql.md  idor.md  information-disclosure.md  input-validation.md  insecure-file-uploads.md  lfi.md  mass-assignment.md  open-redirect.md  parameter-pollution.md  race-conditions.md  rce.md  recon-ports.md  recon.md  request-builder.md  request-smuggling.md  session-mgmt.md  sqli.md  ssrf.md  ssti.md  subdomain-takeover.md  xss.md  xxe.md
descriptions/merged/: auth-testing.md  bfla.md  bug-identification.md  business-logic.md  chain-ssrf-to-rce.md  crypto.md  csrf.md  deserialization.md  error-handling.md  (+23 more)
scripts/: analyze_cyber_policy.py  build_safety_test_set.py  check_refusal_narration.py  classify_switch_no_rescue.py  compare_local_vs_codex_refusals.py  download_external_refs.py  download_references.py  download_wordlists.sh  extract_refusal_corpus.py  reconstruct_hardera_prompts.py  replay_crawl_framing.py  replay_refusals.py  replay_refusals_v2.py  replay_refusals_v3.py  replay_refusals_v4.py  replay_refusals_v5.py  replay_safety_techniques.py  setup.sh  show_failure_diffs.py  websearch_probe.py
src/: benchmark_verdict.py  cli.py  config.py  config_schema.py  flag.py  graph.py  live.py  observability.py  state.py
swarmattacker/: __init__.py  cli.py  graph.py  state.py
tests/: FAILURES.md  conftest.py  test_ablation_gates.py  test_bench_end_verification_block.py  test_codex_cache_shape.py  test_crawl_policy.py  test_finding_parsers.py  test_flag.py  test_flag_watcher.py  test_jsonl_log_handler.py  test_planner_decision_parser.py  test_prompts.py  test_read_served_flag.py  test_reasoning_streaming.py  test_refusal_error.py  test_routing.py  test_skill_loader.py  test_skill_runner_salvage.py  test_tool_registry.py  test_usage_guard.py  test_vocabulary_filter.py  test_xbow_runner.py
wordlists/: README.md  common.txt  wp-plugins.txt
(+373 files in other folders)
