[project]
name = "swarmattacker"
version = "0.1.0"
description = "Multi-methodology swarm penetration testing agent"
readme = "README.md"
authors = [
    { name = "Zviad Jolokhava", email = "z.jolokhava@chainmatics.net" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-tavily>=0.1",
    "playwright>=1.40",
    "pydantic>=2.0",
    "libtmux>=0.40",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "python-nmap>=0.7.1",
    "langgraph-cli[inmem]>=0.2",
    # Interactive `swarm` CLI — questionary for arrow-key menus,
    # rich for the banner / spinners / panels, tomlkit for round-
    # tripping ``swarm-config.toml`` without nuking user comments.
    "questionary>=2.0",
    "rich>=13.0",
    "tomlkit>=0.13",
    "markdownify>=1.2.2",
    "beautifulsoup4>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# By default skip the heavy tiers. Run them explicitly with:
#   uv run pytest -m tools     # tier 3: shell out to real binaries
#   uv run pytest -m live      # tier 4: hit a real LLM (costs tokens)
addopts = "-m 'not tools and not live'"
markers = [
    "tools: tier-3 smoke tests that shell out to external binaries (nmap, ssh, ...)",
    "live: tier-4 tests that hit a real LLM API — opt-in only",
]

[project.scripts]
# ``swarm`` is the new primary CLI — interactive TUI with no args,
# benchmark shortcuts via flags, legacy natural-language one-shot
# when given a positional. ``swarmattacker`` is kept as an alias
# for backwards compatibility (same dispatcher, same module).
swarm         = "src.cli:main"
swarmattacker = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
